Included user_roles_id in fetched user data for update purposes in form

--- a/.scribe/endpoints.cache/00.yaml
+++ b/.scribe/endpoints.cache/00.yaml
@@ -65,13 +65,15 @@ endpoints:
                    id: 2,
                    name: 'Kawhi Leonard',
                    email: 'kawhi.leonard@nba.com',
-                   roles: 'Administrator,Editor'
+                   user_roles: 'Editor,Administrator',
+                   user_roles_id: '2,4'
                },
                {
                    id: 1,
                    name: 'Paul George',
                    email: 'paul.george@nba.com',
-                   roles: 'Subscriber'
+                   user_roles: 'Subscriber',
+                   user_roles_id: '3'
                }
           ]
         headers: []
@@ -162,7 +164,8 @@ endpoints:
                    id: 3,
                    name: 'LeBron James',
                    email: 'lebron.james@nba.com',
-                   user_roles: 'Author,Administrator'
+                   user_roles: 'Author,Administrator',
+                   user_roles_id: '1,4'
                }
            }
         headers: []
@@ -217,7 +220,8 @@ endpoints:
                id: 3,
                name: 'LeBron James',
                email: 'lebron.james@nba.com',
-               user_roles: 'Author,Administrator'
+               user_roles: 'Author,Administrator',
+               user_roles_id: '1,4'
            }
         headers: []
         description: ''
@@ -316,7 +320,8 @@ endpoints:
                    id: 3,
                    name: 'LeBron James',
                    email: 'lebron.james@nba.com',
-                   user_roles: 'Editor,Subscriber'
+                   user_roles: 'Editor,Subscriber',
+                   user_roles_id: '2,3'
                }
            }
         headers: []
