--- a/.scribe/endpoints/00.yaml
+++ b/.scribe/endpoints/00.yaml
@@ -63,13 +63,15 @@ endpoints:
                    id: 2,
                    name: 'Kawhi Leonard',
                    email: 'kawhi.leonard@nba.com',
-                   roles: 'Administrator,Editor'
+                   user_roles: 'Editor,Administrator',
+                   user_roles_id: '2,4'
                },
                {
                    id: 1,
                    name: 'Paul George',
                    email: 'paul.george@nba.com',
-                   roles: 'Subscriber'
+                   user_roles: 'Subscriber',
+                   user_roles_id: '3'
                }
           ]
         headers: []
@@ -160,7 +162,8 @@ endpoints:
                    id: 3,
                    name: 'LeBron James',
                    email: 'lebron.james@nba.com',
-                   user_roles: 'Author,Administrator'
+                   user_roles: 'Author,Administrator',
+                   user_roles_id: '1,4'
                }
            }
         headers: []
@@ -215,7 +218,8 @@ endpoints:
                id: 3,
                name: 'LeBron James',
                email: 'lebron.james@nba.com',
-               user_roles: 'Author,Administrator'
+               user_roles: 'Author,Administrator',
+               user_roles_id: '1,4'
            }
         headers: []
         description: ''
@@ -314,7 +318,8 @@ endpoints:
                    id: 3,
                    name: 'LeBron James',
                    email: 'lebron.james@nba.com',
-                   user_roles: 'Editor,Subscriber'
+                   user_roles: 'Editor,Subscriber',
+                   user_roles_id: '2,3'
                }
            }
         headers: []
